[package]
name = "fd_bs58"
version = "0.1.0"
description = "Optimized Base58 codec for 32 and 64 byte numbers."
keywords = ["base58"]
license = "Apache-2.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
bs58 = "0.4.0"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
